--- a/Swapi-APP-ANDROID/app/src/main/res/values/themes.xml
+++ b/Swapi-APP-ANDROID/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.AndroidClassMP1" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.SwapiApp" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
